--- a/destination.html
+++ b/destination.html
@@ -22,10 +22,86 @@
             <a href="">Login</a>
        
         </div>
-        </div>
-        <div class="intro">
+    </div>
+    <div class="intro">
             <div class="intro1">Destination</div>
             <div  class="intro2"><a href="">Home</a>  /  <a href="">Destination</a></div>
+    </div>
+    <div class="des">
+        <h2>Destinations</h2>
+        <p>Stay up date and check out the deals for these trending destinations</p>
+    </div>
+    <div class="con">
+        <div class="images">
+            <div class="imge"><img src="/image/germany.jpg" alt="">
+            <p>Germany</p></div>
+            <div class="imge"><img src="/image/rome.jpg" alt="">
+            <p>Rome</p></div>
+            <div class="imge"> <img src="/image/pexels-julius-silver-870711.jpg" alt="">
+            <p>USA</p></div>
+            <div class="imge"><img src="/image/london.jpg" alt="">
+            <p>London</p></div>
+            <div class="imge"><img src="/image/canada.jpg" alt=""><p>Canada</p></div>
+            <div class="imge"> <img src="/image/madrid.jpg" alt="">
+            <p>Madrid</p></div>
         </div>
+    </div>
+    <div class="but"><button>view more</button></div>
+    <br><br><br><br><br><br>
+    <div class="cont">
+        <div class="text"><p>Subscribe to our free newsletter</p></div>
+        <div class="form">
+            <input type="text" placeholder="Name">
+            <input type="email" placeholder="Email">
+            <input type="submit" >
+        </div>
+    </div>
+    <div class="explain">
+        <div class="empty"></div>
+        <div class="logo2">
+            <img src="/image/logo2.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam illo facilis consectetur repellendus officiis nihil sit possimus soluta nemo!</p>
+        </div>
+        <div class="booked">
+            <h4>booked ... now what?</h4>
+            <ol>
+                <li>1:Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li>2:Lorem ipsum dolor sit amet.    </li>
+                <li>3:Lorem, ipsum dolor.</li>
+                <li>4:Lorem ipsum dolor  amet consectetur adipisicng.</li>
+                <li>5:Lorem ipsum dolor sit amet consectetur.</li>
+                <li>6:Lorem ipsum dolor t amet consectetur adipis.</li>
+                <li>7:Lorem ipsum dolor sit amet.</li>
+            </ol>
+        </div>
+        <div class="comun">
+            <h4>community</h4>
+            <a href="">Twitter</a>
+            <a href="">Facebook</a>
+            <a href="">Instagram</a>
+            <a href="">Google++</a>
+            <a href="">Pinterest</a>
+            <a href="">Email</a>
+            <a href="">Lorem</a>
+        </div>
+        <div class="link">
+            <h4>useful-link</h4>
+            <a href="">laboraism</a>
+            <a href="">nobis autem</a>
+            <a href="">magnam</a>
+            <a href="">amet</a>
+            <a href="">nesciunt</a>
+        </div>
+    </div>
+    <div class="footer">Group of people eos dignissimos ducimus Lorem ipsum dolor sit.</div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
