--- a/destination.html
+++ b/destination.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="nav">
-        <a  class="logo" href=""><img class="loim" src="/image/logo2.jpg" alt=""></a>
+        <a  class="logo" href=""><img class="loim" src="./image/logo2.jpg" alt=""></a>
         <div class="navigate"><ul>
             <li><a href="">Home</a></li>
             <li><a href="">Age group</a></li>
@@ -33,16 +33,16 @@
     </div>
     <div class="con">
         <div class="images">
-            <div class="imge"><img src="/image/germany.jpg" alt="">
+            <div class="imge"><img src="./image/germany.jpg" alt="">
             <p>Germany</p></div>
-            <div class="imge"><img src="/image/rome.jpg" alt="">
+            <div class="imge"><img src="./image/rome.jpg" alt="">
             <p>Rome</p></div>
-            <div class="imge"> <img src="/image/pexels-julius-silver-870711.jpg" alt="">
+            <div class="imge"> <img src="./image/pexels-julius-silver-870711.jpg" alt="">
             <p>USA</p></div>
-            <div class="imge"><img src="/image/london.jpg" alt="">
+            <div class="imge"><img src="./image/london.jpg" alt="">
             <p>London</p></div>
-            <div class="imge"><img src="/image/canada.jpg" alt=""><p>Canada</p></div>
-            <div class="imge"> <img src="/image/madrid.jpg" alt="">
+            <div class="imge"><img src="./image/canada.jpg" alt=""><p>Canada</p></div>
+            <div class="imge"> <img src="./image/madrid.jpg" alt="">
             <p>Madrid</p></div>
         </div>
     </div>
@@ -59,7 +59,7 @@
     <div class="explain">
         <div class="empty"></div>
         <div class="logo2">
-            <img src="/image/logo2.jpg" alt="">
+            <img src="./image/logo2.jpg" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam illo facilis consectetur repellendus officiis nihil sit possimus soluta nemo!</p>
         </div>
         <div class="booked">
